--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# 忽略配置文件
+*.yaml
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
